# agent-orchestration-platform

./: .aop.yaml  .gitignore  AGENTS.md  README.en.md  README.md  README.zh-CN.md  fix_dashboard.py  install.ps1  install.sh  pyproject.toml  test_app.py  test_report_timeout_integration.md
.aop/: PROJECT_MEMORY.md  SOUL.md  SOUL.md.bak  STATE.md  SYSTEM_PROMPT.md  TEAM.md  TEAM_SETUP.md  WORKFLOW.md  WORKFLOW.md.bak  memory_config.yaml
.aop/.aop/: STATE.md
.claude/: CLAUDE.md
.opencode/agents/: aop-coach.md
demos/: basic_demo.py
docs/: CCR_AGENT_GUIDE.md  CCR_INSTALL_GUIDE.md  CLAUDE_CMD_CONFIG.md  IMPROVEMENT_PLAN.md  OPENCLAW_GUIDE.md  ORCHESTRATOR_ABSTRACTION_REPORT.md  agent-auto-startup-solution.md  best-practices.md  cross-platform-compatibility-report-2026-03-11.md  dashboard-improvement-plan-2026-03-11.md  dashboard-test-report-2026-03-11.md  gsd-superpowers-research-2026-03-12.md  gsd-superpowers-research-deep-2026-03-12.md  opencode-identity-diagnosis.md  opencode-identity-issue.md  orchestrator-review-2026-03-11.md  startup-analysis.md
examples/: .aop.yaml.example
skills/aop-coach/: README.md  SKILL.md  install.ps1  (+1 more)
tests/: __init__.py  test_agent_phase3.py  test_agent_validator.py  test_auto_init.py  test_config.py  test_error_recovery.py  test_hypothesis_graph.py  test_hypothesis_prioritizer.py  test_knowledge.py  test_knowledge_base.py  test_llm_client.py  test_llm_evaluator.py  test_orchestrator.py  test_preflight.py  test_primary_agent.py  test_review.py  test_state_manager.py  test_timeout_manager.py  test_validation_path_planner.py
(+140 files in other folders)
